# vortex-test

./: .gitignore  BUILD.bazel  MODULE.bazel  main.rs  main.sql
.zed/: tasks.json
