bazel_dep(name = "rules_rust", version = "0.64.0")
rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2024", versions = ["1.89.0"])
crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(package = "bon", version = "3.7.2")
crate.spec(package = "eyre", version = "0.6.12")
crate.spec(package = "mimalloc", version = "0.1.48")
crate.spec(package = "tap", version = "1.0.1")
crate.spec(package = "tokio", version = "1.47.1", features = ["full"])
crate.spec(package = "tracing", version = "0.1.41")
crate.spec(package = "tracing-subscriber", version = "0.3.20")
crate.spec(package = "vortex", version = "0.52.1", features = ["tokio"])
crate.from_specs()
use_repo(crate, "crates")
